--- a/table/table.html
+++ b/table/table.html
@@ -6,19 +6,19 @@
     <title>表の作成</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap">
     <link rel="stylesheet" href="table-style.css">
-
+<
     <table>
         <caption>ワールドトリガー</caption>
         <thead>
             <tr>
                 <th></th>
-                <td><img src="c:\Users\nishi\Pictures\空閑.jpg" alt="空閑遊真"></td>
-                <td><img src="c:\Users\nishi\Pictures\メガネ.jpg" alt="三雲修"></td>
-                <td><img src="c:\Users\nishi\Pictures\千佳.jpg" alt="雨取千佳"></td>
-                <td><img src="c:\Users\nishi\Pictures\迅.jpg" alt="迅悠一"></td>
-                <td><img src="c:\Users\nishi\Pictures\ヒュース.png" alt="ヒュース"></td>
+                <td><img src="img/空閑.gif" alt="空閑遊真"></td>
+                <td><img src="img/三雲.gif" alt="三雲修"></td>
+                <td><img src="img/a雨取.gif" alt="雨取千佳"></td>
+                <td><img src="img/迅.gif" alt="迅悠一"></td>
+                <td><img src="img/ヒュース.gif" alt="ヒュース"></td>
             </tr>
             <tr>
                 <th>名前</th>
