--- a/profile/index.html
+++ b/profile/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>自己紹介</title>
+    <link rel="stylesheet" href="profile-style.css">
 </head>
 
 <body>
     <h1>氏名</h1>
- <p>西 朱莉</p>  
+ <p>西 <span>朱莉</span></p>  
+ <div class="text-brown">
+ <h2>趣味</h2>
  <ul>
-    <h1>趣味</h1><br>
-    <li>ゲーム実況者を見ること</li>
-    <li>音楽を聴くこと</li>
-    <h1>好きなこと</h1><br>
+    <li id="bg-yellow">ゲーム実況者を見ること</li>
+    <li id="bg-lime">音楽を聴くこと</li>
+ </ul>
+</div>
+ <div class="bg-orange">
+ <h2>好きなこと</h2>
+ <ul>
     <li>寝ること</li><br>
     <li>スマホゲームをすること</li>
  </ul>
- <img src="futon_moufu.png" alt="寝てる">
- <img src="smartphone_smile_gils.png" alt="見てる">
+</div>
+ 
+ <img src="img/寝る.png" alt="寝てる">
+ <img src="img/見る.png" alt="見てる">
 
 </body>
 </html>
