--- a/table/table.html
+++ b/table/table.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 <link>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>表の作成</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap">
-    <link rel="stylesheet" href="table-style.css">
-<
-    <table>
+<link rel="stylesheet" href="table-style.css">
+</head>
+<body>
+<table>
         <caption>ワールドトリガー</caption>
-        <thead>
             <tr>
                 <th></th>
                 <td><img src="img/空閑.gif" alt="空閑遊真"></td>
@@ -52,11 +52,7 @@
                 <td>中村悠一</td>
                 <td>島崎信長</td>
             </tr>
-            
-        </thead>
     </table>
-</head>
-<body>
-    
+
 </body>
 </html>
