入力フォーム

--- a/form/form.html
+++ b/form/form.html
@@ -39,8 +39,8 @@
     </fieldset>
 <fieldset>
     <legend>利用規約</legend>
-    <p> <a href="terms.html" target="_blank">利用規約を確認する</a></p>
-        <p><label><input type="terms" name="terms" value="agree"> 規約に同意する</label></p>
+    <p> <a href="terms.html" target="_blank">会員規約を確認する</a></p>
+        <p><label><input type="checkbox" name="terms" value="agree"> 規約に同意する</label></p>
     </fieldset>
         <p><button type="reset">クリア</button>
         <button type="submit">確認</button></p>
